--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
             <p class="login-subtitle">Capacitação Continuada</p>
             <div class="municipio-info">
                 <!-- PERSONALIZE AQUI COM DADOS DO SEU MUNICÍPIO -->
-                <strong>Prefeitura Municipal de [SEU MUNICÍPIO]</strong><br>
+                <strong>Prefeitura da Estância Turística de Ouro Preto do Oeste</strong><br>
                 Departamento de Compras e Licitações
             </div>
             
@@ -685,7 +685,7 @@
             // EXEMPLO DE DIRETOR/COORDENADOR
             'diretor': {
                 password: '123456', // ALTERE A SENHA EM PRODUÇÃO!
-                name: 'João Silva', // SUBSTITUA PELO NOME REAL
+                name: 'Fábio Lopes Galdêncio', // SUBSTITUA PELO NOME REAL
                 role: 'Diretor(a) DCL',
                 isAdmin: true,
                 progress: {
@@ -1887,4 +1887,5 @@
         });
     </script>
 </body>
+
 </html>
