--- a/index.html
+++ b/index.html
@@ -684,9 +684,9 @@
         const USUARIOS_SISTEMA = {
             // EXEMPLO DE DIRETOR/COORDENADOR
             'diretor': {
-                password: '123456', // ALTERE A SENHA EM PRODUÇÃO!
+                password: '12345678', // ALTERE A SENHA EM PRODUÇÃO!
                 name: 'Fábio Lopes Galdêncio', // SUBSTITUA PELO NOME REAL
-                role: 'Diretor(a) DCL',
+                role: 'Diretor do DCL',
                 isAdmin: true,
                 progress: {
                     'principios': 100,
@@ -702,8 +702,8 @@
             // EXEMPLO DE ANALISTA SÊNIOR
             'analista.senior': {
                 password: '123456', // ALTERE A SENHA EM PRODUÇÃO!
-                name: 'Maria Santos', // SUBSTITUA PELO NOME REAL
-                role: 'Analista Sênior',
+                name: 'Edvaldo Carlos Alves Bedelegue', // SUBSTITUA PELO NOME REAL
+                role: 'Gerente de Apoio Administrativo do DCL',
                 isAdmin: false,
                 progress: {
                     'principios': 100,
@@ -719,8 +719,8 @@
             // EXEMPLO DE ANALISTA JÚNIOR
             'analista.junior': {
                 password: '123456', // ALTERE A SENHA EM PRODUÇÃO!
-                name: 'Pedro Costa', // SUBSTITUA PELO NOME REAL
-                role: 'Analista Júnior',
+                name: 'Fernanda Batista Lima Pavaneli', // SUBSTITUA PELO NOME REAL
+                role: 'Agente de Contratação/Pregoeira',
                 isAdmin: false,
                 progress: {
                     'principios': 100,
@@ -1889,3 +1889,4 @@
 </body>
 
 </html>
+
